--- a/src/app/components/filmes/filmes.component.html
+++ b/src/app/components/filmes/filmes.component.html
@@ -1,1 +1,44 @@
-<p>filmes works!</p>
+<div class="container mat-elevation-z8">
+  @if (isLoadingResults) {
+  <div class="loading-shade">
+    <mat-spinner></mat-spinner>
+  </div>
+  }
+
+  <div class="table-container">
+    <table mat-table [dataSource]="movies" class="table">
+      <ng-container matColumnDef="episode_id">
+        <th mat-header-cell *matHeaderCellDef>Episódio</th>
+        <td mat-cell *matCellDef="let row">{{ row.number }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>Título</th>
+        <td mat-cell *matCellDef="let row">{{ row.title }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="release_date">
+        <th mat-header-cell *matHeaderCellDef>Estréia</th>
+        <td mat-cell *matCellDef="let row">
+          {{ formatarData(row.release_date) }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="director">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+          Diretor
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.state }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+
+  <mat-paginator
+    [length]="resultsLength"
+    [pageSize]="30"
+    aria-label="Selecione uma página de resultados"
+  ></mat-paginator>
+</div>
